# Python-poetry-vulnerable

./: README.md  app.py  pyproject.toml  test_vulnerabilities.py  utils.py  vulnerability_report.json
